Refactor and modernize CSS processing methods
- Renamed methods for consistency with Java naming conventions.
- Replaced loops with lambda expressions for improved readability.
- Enhanced URL handling in stylesheet extraction.
- Improved exception handling for malformed URLs.
- Updated list implementations for better performance.
- Added comprehensive comments and JavaDocs for clarity.
- Ensured compatibility with JDK 17.

These changes improve code maintainability and modernize the codebase.